--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,6 +13,7 @@
 <p><strong>Information Collection and Use</strong></p>
 <p>For a better experience while using our Service, we may require you to provide us with certain
     personally identifiable information, including but not limited to email, location and camera use. 
+	The app does not require any photos that contain people and the user should only take the photos as directed (of trees only)
 	The information that we request is will be retained by us and used as described in this privacy policy.</p>
 <p>The app does use third party services that may collect information used to identify you. 
 
@@ -27,7 +28,7 @@
 <p>Cookies are files with small amount of data that is commonly used an anonymous unique identifier.
     These are sent to your browser from the website that you visit and are stored on your devices’s
     internal memory.</p>
-<p>>!This Services does not uses these “cookies” explicitly. However, the app may use third party code
+<p>>This Service does not uses these “cookies” explicitly. However, the app may use third party code
     and libraries that use “cookies” to collection information and to improve their services. You
     have the option to either accept or refuse these cookies, and know when a cookie is being sent
     to your device. If you choose to refuse our cookies, you may not be able to use some portions of
